--- a/FrmMain.xaml
+++ b/FrmMain.xaml
@@ -1,8 +1,40 @@
 ﻿<Window x:Class="MineSweeper.FrmMain"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="FrmMain" Height="300" Width="300">
-    <Grid>
-        
-    </Grid>
+        Title="MineSweeper" Height="323" Width="300" WindowStyle="None" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Closing="Window_Closing">
+    <DockPanel Height="auto" HorizontalAlignment="Stretch" Name="dockPanel1" VerticalAlignment="Stretch" Width="auto" LastChildFill="True">
+        <Menu DockPanel.Dock="Top" Height="23" Name="menu1" Width="auto">
+            <MenuItem Header="Game">
+                <MenuItem Header="Option" Click="OptionMenu_Click" />
+                <MenuItem Header="Exit" Click="ExitMenu_Click" />
+            </MenuItem>
+        </Menu>
+        <Canvas DockPanel.Dock="Top" Height="33" Name="canvas1" Width="auto">
+            <Label Canvas.Left="0" Canvas.Top="0" Content="Level :" Height="33" Name="lblLevel" />
+        </Canvas>
+        <Grid Name="grid1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+        </Grid>
+    </DockPanel>
 </Window>
