--- a/FrmMain.xaml
+++ b/FrmMain.xaml
@@ -12,29 +12,7 @@
         <Canvas DockPanel.Dock="Top" Height="33" Name="canvas1" Width="auto">
             <Label Canvas.Left="0" Canvas.Top="0" Content="Level :" Height="33" Name="lblLevel" />
         </Canvas>
-        <Grid Name="grid1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
+        <Grid Name="mainGrid">           
         </Grid>
     </DockPanel>
 </Window>
