--- a/FrmMain.xaml
+++ b/FrmMain.xaml
@@ -12,7 +12,7 @@
         <Canvas DockPanel.Dock="Top" Height="33" Name="canvas1" Width="auto">
             <Label Canvas.Left="0" Canvas.Top="0" Content="Level :" Height="33" Name="lblLevel" />
         </Canvas>
-        <Grid Name="mainGrid">           
+        <Grid Name="mainGrid" VerticalAlignment="Stretch">           
         </Grid>
     </DockPanel>
 </Window>
