--- a/FrmOption.xaml
+++ b/FrmOption.xaml
@@ -6,9 +6,9 @@
 
         <GroupBox Header="Difficulty" Height="101" HorizontalAlignment="Left" Name="groupBox1" VerticalAlignment="Top" Width="278">
             <Grid>
-                <RadioButton Content="Low Class(9X9)" Height="16" HorizontalAlignment="Left" Margin="15,10,0,0" Name="rdoLow" VerticalAlignment="Top" Checked="rdoLow_Checked" />
-                <RadioButton Content="Middle Class(16X16)" Height="16" HorizontalAlignment="Left" Margin="15,30,0,0" Name="rdoMiddle" VerticalAlignment="Top" Checked="rdoMiddle_Checked" />
-                <RadioButton Content="High Class(16X30)" Height="16" HorizontalAlignment="Left" Margin="15,50,0,0" Name="rdoHigh" VerticalAlignment="Top" Checked="rdoHigh_Checked" />
+                <RadioButton Content="Low Class(9X9)" Height="16" HorizontalAlignment="Left" Margin="15,10,0,0" Name="rdoLow" VerticalAlignment="Top" />
+                <RadioButton Content="Middle Class(16X16)" Height="16" HorizontalAlignment="Left" Margin="15,30,0,0" Name="rdoMiddle" VerticalAlignment="Top" />
+                <RadioButton Content="High Class(30X16)" Height="16" HorizontalAlignment="Left" Margin="15,50,0,0" Name="rdoHigh" VerticalAlignment="Top" />
             </Grid>
         </GroupBox>
         <Button Content="Apply" Height="23" HorizontalAlignment="Left" Margin="110,107,0,0" Name="btnApply" VerticalAlignment="Top" Width="75" Click="btnApply_Click" />
