--- a/FrmMain.xaml
+++ b/FrmMain.xaml
@@ -10,9 +10,9 @@
             </MenuItem>
         </Menu>
         <Canvas DockPanel.Dock="Top" Height="33" Name="canvas1" Width="auto">
-            <Label Canvas.Left="0" Canvas.Top="0" Content="Level :" Height="33" Name="lblLevel" />
+            <Label Canvas.Left="0" Canvas.Top="0" Canvas.Bottom="0" Content="Level :" Height="33" Name="lblLevel" />
+            <TextBlock x:Name="textBlock1" Canvas.Right="30" Canvas.Top="0" Height="33" TextWrapping="Wrap" Text="000" FontSize="20" Foreground="Black" FontWeight="Bold" TextAlignment="Center"/>
         </Canvas>
-        <Grid Name="mainGrid" VerticalAlignment="Stretch">           
-        </Grid>
+        <Grid Name="mainGrid" VerticalAlignment="Stretch"/>
     </DockPanel>
 </Window>
